<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_marginBottom="4dp"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/txt_game_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_release_date"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <!-- Thumbnail Image -->
    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/game_title_text"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/game_title"
        android:id="@+id/txt_gameTitle"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@+id/thumbnail"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_game_rating"
        android:text="@string/game_rating"
        android:textSize="13sp"
        android:layout_marginLeft="3dp"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/txt_gameTitle"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_toEndOf="@+id/thumbnail"/>

    <TextView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/txt_game_platform"
        android:text="@string/game_platform"
        android:textSize="13sp"
        android:layout_marginLeft="3dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/txt_game_rating"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_toEndOf="@+id/thumbnail"/>
    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/button_add_database"
        android:src="@mipmap/ic_action_add_database"
        android:layout_alignBottom="@+id/thumbnail"
        android:layout_alignLeft="@+id/txt_game_platform"
        android:layout_alignStart="@+id/txt_game_platform"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/text_add_to_database"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:id="@+id/text_add_to_database"
        android:layout_alignBottom="@+id/button_add_database"
        android:layout_toRightOf="@+id/button_add_database"
        android:layout_toEndOf="@+id/button_add_database"/>
    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/button_add_wishlist"
        android:src="@mipmap/ic_action_add_wishlist"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_alignTop="@+id/button_add_database"
        android:layout_toRightOf="@+id/text_add_to_database"
        android:layout_toEndOf="@+id/text_add_to_database"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_add_to_wishlist"
        android:textSize="12sp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:id="@+id/text_add_to_wishlist"
        android:layout_alignBottom="@+id/button_add_wishlist"
        android:layout_toRightOf="@+id/button_add_wishlist"
        android:layout_toEndOf="@+id/button_add_wishlist"/>
</RelativeLayout>