<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@color/colorLightGreen"
                android:layout_marginBottom="4dp"
                android:elevation="4dp">


    <!-- Thumbnail Image -->
    <ImageView
        android:id="@+id/thumbnail_Games"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/txt_gameTitle_Games"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/thumbnail_Games"
        android:layout_toRightOf="@+id/thumbnail_Games"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/game_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/game_title_text"
        app:layout_constraintLeft_toRightOf="@+id/thumbnail_Games"
        app:layout_constraintRight_toLeftOf="@+id/txt_game_rating_Games"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/txt_game_genre_Games"
        android:text="@string/game_genre"
        android:textColor="@color/colorBlack"
        android:textSize="13sp"
        android:layout_below="@+id/txt_gameTitle_Games"
        android:layout_toRightOf="@+id/thumbnail_Games"
        android:layout_toEndOf="@+id/thumbnail_Games"
        app:layout_constraintLeft_toRightOf="@+id/thumbnail_Games"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/txt_game_rating_Games"
        android:layout_marginRight="8dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_gameTitle_Games"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/txt_game_release_date_Games"
        android:text="@string/game_release_date"
        android:textColor="@color/colorBlack"
        android:textSize="13sp"
        android:layout_below="@+id/txt_game_genre_Games"
        android:layout_toRightOf="@+id/thumbnail_Games"
        android:layout_toEndOf="@+id/thumbnail_Games"
        app:layout_constraintLeft_toRightOf="@+id/thumbnail_Games"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/txt_game_rating_Games"
        android:layout_marginRight="8dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_game_genre_Games"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/txt_game_platform_wishlist"
        android:text="@string/game_platform"
        android:textSize="13sp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/txt_game_release_date_Games"
        android:layout_alignLeft="@+id/txt_game_genre_Games"
        android:layout_alignStart="@+id/txt_game_genre_Games"
        app:layout_constraintLeft_toRightOf="@+id/thumbnail_Games"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_game_release_date_Games"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/txt_game_release_date_Games"
        app:layout_constraintHorizontal_bias="0.0"/>


        <TextView
            android:id="@+id/txt_game_rating_Games"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/game_score_big"
            android:text="95"
            android:paddingTop="5dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/button_wishlist_options"
            android:src="@mipmap/ic_more_hor"
            android:background="@color/colorLightGreen"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_game_rating_Games"
            android:layout_marginRight="18dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="1.0"/>
</android.support.constraint.ConstraintLayout>