<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"

    >


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">
        <!-- have whatever children you want inside -->

        <ImageView
            android:id="@+id/iv_game_cover"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:cropToPadding="false"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_img_placeholder"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_game_title"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.154"/>

        <TextView
            android:id="@+id/txt_game_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="Game @string/game_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/game_title_big"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/txt_game_score_general_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:text="100"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/game_score_huge"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/iv_game_cover"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_score_title"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"/>

        <TextView
            android:id="@+id/txt_score_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="55dp"
            android:gravity="center"
            android:text="@string/score"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="35sp"
            app:layout_constraintLeft_toRightOf="@+id/iv_game_cover"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_game_title"
            app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="7dp"
            android:text="Release Date"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/game_detail_fields_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_game_cover"
            app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/game_genre"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/game_detail_fields_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_release_date"/>

        <TextView
            android:id="@+id/txt_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/game_detail_fields"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            android:text="TextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.0"
            />

        <TextView
            android:id="@+id/txt_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/game_detail_fields"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:text="@string/game_platform"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/game_detail_fields_title"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_genre"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/txt_platforms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/game_detail_fields"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/game_modes"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/game_detail_fields_title"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_platforms"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/txt_game_modes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/game_detail_fields"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>